Converted project to Java 11. Restructured pom files to work for the switch to 11.